--- a/design.html
+++ b/design.html
@@ -27,7 +27,7 @@
 						<ul class="links">
 							<li><a href="index.html">Data Projects</a></li>
 							<li class="active"><a href="design.html">Design</a></li>
-							<li><a href="Stack.html">Stack</a></li>
+							<li><a href="stack.html">Stack</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/emmyzaz" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
