--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Emmanuel M. Azubuike<br /></h1>
 						<h2>Data Analyst, Designer and Developer</h2>
-						<p>Follow on X (Formerly Twitter) <a href="https://twitter.com/emmyzaz" title="Follow me on X(Formerly Twitter)">@Emmyzaz,</a><br />
+						<p>Follow on X (Formerly Twitter) <a href="https://twitter.com/emmyzaz" title="Follow me on X(Formerly Twitter)">@Emmyzaz</a> &amp;<br />
 					 Connect on Linkedin <a href="https://www.linkedin.com/in/emmyz-azuby/" title="Connect on Linkedin">here</a><br /><hr>
 						 <a href="#" class="button icon solid fa-download" title="Download CV">Download CV/Resume</a></p>
 						<ul class="actions">
@@ -42,11 +42,9 @@
 							<li><a href="stack.html">Stack</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://twitter.com/emmyzaz" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://dribbble.com/3mmyz/shots" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-							<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-							<li><a href="https://github.com/4emmyzaz" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://twitter.com/emmyzaz" class="icon brands fa-twitter" title="X/Twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://dribbble.com/3mmyz/shots" class="icon brands fa-dribbble" title="Dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="https://github.com/4emmyzaz" class="icon brands fa-github" title="GitHub"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -185,10 +183,9 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://twitter.com/emmyzaz" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://dribbble.com/3mmyz/shots" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="https://github.com/4emmyzaz" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-									
+									<li><a href="https://twitter.com/emmyzaz" class="icon brands alt fa-twitter" title="X/Twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://dribbble.com/3mmyz/shots" class="icon brands fa-dribbble"title="Dribbble"><span class="label">Dribbble</span></a></li>
+									<li><a href="https://github.com/4emmyzaz" class="icon brands alt fa-github" title="GitHub"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
@@ -196,7 +193,7 @@
 
 				<!-- Copyright -->
 			
-					<div id="footer" style="justify-content: center;">
+					<div id="copyright footer" style="justify-content: center; text-align: center;">
 						<ul><li>&copy; 2025 — Copyright</li></ul>
 					</div>
 
