--- a/design.html
+++ b/design.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Home</a>
+						<a href="index.html" class="logo">ZAZ</a>
 					</header>
 
 				<!-- Nav -->
@@ -30,11 +30,9 @@
 							<li><a href="stack.html">Stack</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://twitter.com/emmyzaz" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://dribbble.com/3mmyz/shots" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-							<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-							<li><a href="https://github.com/4emmyzaz" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://twitter.com/emmyzaz" class="icon brands fa-twitter" title="X/Twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://dribbble.com/3mmyz/shots" class="icon brands fa-dribbble" title="Dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="https://github.com/4emmyzaz" class="icon brands fa-github" title="GitHub"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -80,14 +78,10 @@
 						<section>
 							<h3>Social</h3>
 							<ul class="icons alt">
-								<li><a href="https://twitter.com/emmyzaz" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://dribbble.com/3mmyz/shots" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="https://github.com/4emmyzaz" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<!-- <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li> -->
-								
+								<li><a href="https://twitter.com/emmyzaz" class="icon brands alt fa-twitter" title="X/Twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://dribbble.com/3mmyz/shots" class="icon brands fa-dribbble"title="Dribbble"><span class="label">Dribbble</span></a></li>
+								<li><a href="https://github.com/4emmyzaz" class="icon brands alt fa-github" title="GitHub"><span class="label">GitHub</span></a></li>
 							</ul>
-						</section>
 					</section>
 				</footer>
 
@@ -97,7 +91,7 @@
 						<ul><li>&copy; 2025 — Copyright</li></li></ul>
 					</div>
 
-			</div>
+			<!-- </div> -->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
