--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 					<div id="intro">
 						<h1>Emmanuel M. Azubuike<br /></h1>
 						<h2>Data Analyst, Designer and Developer</h2>
-						<p>Follow on X (Formerly Twitter) <a href="https://twitter.com/emmyzaz" title="Follow me on X(Formerly Twitter)">@Emmyzaz</a> &amp;<br />
-					 Connect on Linkedin <a href="https://www.linkedin.com/in/emmyz-azuby/" title="Connect on Linkedin">here</a><br /><hr>
-						 <a href="#" class="button icon solid fa-download" title="Download CV">Download CV/Resume</a></p>
+						<p>Follow on X (Formerly Twitter) <a href="https://twitter.com/emmyzaz" target="_blank" title="Follow me on X(Formerly Twitter)">@Emmyzaz</a> &amp;<br />
+					 Connect on Linkedin <a href="https://www.linkedin.com/in/emmyz-azuby/" target="_blank" title="Connect on Linkedin">here</a><br /><hr>
+						 <a href="#" class="button icon solid fa-download" target="_blank" title="Download CV">Download CV/Resume</a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
