--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<h2>Data Analyst, Designer and Developer</h2>
 						<p>Follow on X (Formerly Twitter) <a href="https://twitter.com/emmyzaz" target="_blank" title="Follow me on X(Formerly Twitter)">@Emmyzaz</a> &amp;<br />
 					 Connect on Linkedin <a href="https://www.linkedin.com/in/emmyz-azuby/" target="_blank" title="Connect on Linkedin">here</a><br /><hr>
-						 <a href="#" class="button icon solid fa-download" target="_blank" title="Download CV">Download CV/Resume</a></p>
+						 <a href="https://drive.google.com/file/d/1uH6mZNgCLPgeTN6lJK2jHo2S648EYZAf/view?usp=sharing" class="button icon solid fa-download" target="_blank" title="Download CV">Download CV/Resume</a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -169,7 +169,7 @@
 							<blockquote style="color: #000;">
 							I'm a Software Developer and Data Analyst passionate about building efficient solutions and uncovering insights from data.
 							</blockquote><br/>
-							<p> <a href="#" style="justify-content: center;" class="button icon primary fit solid fa-download" title="Download CV">Download CV/Resume</a></p>
+							<p> <a href="https://drive.google.com/file/d/1uH6mZNgCLPgeTN6lJK2jHo2S648EYZAf/view?usp=sharing" style="justify-content: center;" class="button icon primary fit solid fa-download" title="Download CV">Download CV/Resume</a></p>
 						</section>
 						<section class="split contact">
 							<section class="alt">
